[package]
authors = ["polygon <polygon@wh2.tu-dresden.de>"]
name = "usbip-rs"
version = "0.1.0"
[[bin]]
name = "testsrv"
path = "src/testsrv.rs"

[dependencies]
bitflags = "1.0.3"
bufstream = "0.1.3"
byteorder = "1.2.3"
enum_primitive = "0.1.1"
num = "0.1.42"

[lib]
name = "vusbip"
path = "src/lib.rs"
